--- a/src/assets/styles/design/_components.scss
+++ b/src/assets/styles/design/_components.scss
@@ -121,6 +121,10 @@
 }
 
 // Basic tags
+.border-tag-red,
+.border-tag-blue,
+.border-tag-green,
+.border-tag-orange,
 .small-border-tag-red,
 .small-border-tag-blue,
 .small-border-tag-green,
@@ -128,27 +132,41 @@
     border: 2px solid transparent;
     border-radius: 30px;
     padding-inline: .5em;
-    font-size: var(--fs-small);
     font-weight: 700;
+
+    display: flex;
+    align-items: center;
+    min-width: 0;
+}
+
+.small-border-tag-red,
+.small-border-tag-blue,
+.small-border-tag-green,
+.small-border-tag-orange {
+    font-size: var(--fs-small);
     line-height: var(--fs-small);
 }
 
-.small-border-tag-red {
+.small-border-tag-red,
+.border-tag-red {
     border-color: hsl(var(--clr-red));
     color: hsl(var(--clr-red));
 }
 
-.small-border-tag-blue {
+.small-border-tag-blue,
+.border-tag-blue {
     border-color: hsl(var(--clr-blue));
     color: hsl(var(--clr-blue));
 }
 
-.small-border-tag-green {
+.small-border-tag-green,
+.border-tag-green {
     border-color: hsl(var(--clr-green));
     color: hsl(var(--clr-green));
 }
 
-.small-border-tag-orange {
+.small-border-tag-orange,
+.border-tag-orange {
     border-color: hsl(var(--clr-orange));
     color: hsl(var(--clr-orange));
 }
