--- a/src/app/features/posts/post-detail/post-detail.component.scss
+++ b/src/app/features/posts/post-detail/post-detail.component.scss
@@ -1,126 +1,32 @@
-:host {
-    display: block;
-    background-image: url('/assets/images/bg-desktop-light-purple.png');
-    background-size: contain;
-    // background-attachment: fixed;
-
-    padding: 4rem 4rem 1rem 4rem;
-    
-    min-height: calc(100% - 4rem - 1rem); // 4rem = navbar height
-}
-
-.main {
+.container {
     display: flex;
-    gap: 1rem;
-}
-
-.card {
-    margin-top: 0.5rem;
-    max-width: 650px;
-}
-
-.doc-preview {
-    flex-grow: 1;
-    min-width: 20rem;
-    aspect-ratio: 2 / 2.5;
-    // height: calc(100vh - 4rem - 1rem - 2rem);
-}
-
-.time-data {
-    font-size: 0.7rem;
-    line-height: 0.7rem;
-}
-
-.academic-level-tag, .subject-tag, .axis-tag{
-    height: auto;
-    color: var(--light-text);
-}
-
-.academic-level-tag {
-    background-color: var(--primary-color);
-}
-
-.subject-tag {
-    background-color: var(--warn-color);
-}
-
-.axis-tag {
-    background-color: var(--purple-color);
-}
-
-
-.document {
-    background-color: #e9e9e9;
-    border-radius: 30px;
-
-    display: flex;
+    align-items: flex-start;
     justify-content: space-between;
-    align-items: center;
-    padding-left: 1rem;
+    gap: 1rem;
+    padding-bottom: 1.5rem;
+    flex-wrap: wrap;
+}
 
-    font-weight: 500;
+@media (min-width: 64rem) {
+    .container {
+        flex-wrap: nowrap;
+    }
 
-    cursor: pointer;
-
-    user-select: none;
-
-    > span {
-        overflow: hidden;
-        text-overflow: ellipsis; 
-        white-space: nowrap;
+    .post-info-card {
+        max-width: 320px;
     }
 }
 
-@media (max-width: 48rem) {
-    :host {
-        padding: 4rem 1rem 1rem 1rem;
-    }
+.doc-viewer {
+    width: 100%;
+    height: 85vh;
+    border-radius: 10px;
+    background-color: hsl(var(--clr-white));
+    padding: 0.25rem;
+    resize: vertical;
+    overflow: auto;
 }
 
-// Tablet and mobile
-@media (max-width: 62rem) {
-    .main {
-        flex-direction: column;
-    }
-
-    .document {
-        cursor: none;
-
-        > span {
-            max-width: 21ch;
-        }
-    }
-
-    .card {
-        max-width: 100%;
-    }
-}
-
-.download-button {
-    border-radius: 30px;
-    min-width: 83px;
-}
-
-.pdf-style {
-    color: var(--light-text);
-    background-color: var(--warn-color);
-}
-.doc-style {
-    color: var(--light-text);
-    background-color: var(--primary-color);
-}
-.ppt-style {
-    color: var(--light-text);
-    // TODO: Find orange color
-    background-color: var(--accent-color);
-}
-.xls-style {
-    color: var(--light-text);
-    // TODO: Find green light color
-    background-color: var(--green-dark-color);
-}
-
-.doc-shimmer {
-    flex-grow: 1;
-    min-width: 25rem;
+ngx-doc-viewer {
+    height: 99%;
 }
