--- a/src/app/features/results/results-list/results-list.component.html
+++ b/src/app/features/results/results-list/results-list.component.html
@@ -146,7 +146,7 @@
         <div class="flex-space_between-center">
           <p>{{ post.user.fullName }} - {{ post.createdAt|timeAgo }}</p>
 
-          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Opciones" matTooltip="Opciones" class="reset-mat-icon-button">
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Opciones" matTooltip="Opciones">
             <mat-icon class="text-blue-dark">more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
@@ -178,7 +178,7 @@
   
           <div class="flex-wrap gap-025">
             <span class="small-border-tag-{{ post.mainFile.tagColor }}">{{ post.mainFile.ext }}</span>
-            <ng-container *ngFor="let file of post.suportingMaterial">
+            <ng-container *ngFor="let file of post.supportingMaterial">
               <span class="small-border-tag-{{ file.tagColor }}">{{ file.ext }}</span>
             </ng-container>
           </div>
@@ -191,7 +191,7 @@
         </div>
   
         <div class="flex-space_between-center">
-          <div class="flex-center-center gap-1">
+          <div class="flex-center-center gap-1 flex-wrap">
             <div class="flex-center-center gap-025">
               <mat-icon class="small-icon text-blue-dark">favorite_outline</mat-icon>
               <span class="fw-600">{{ post.totalLikes }} Me gusta</span>
