--- a/src/assets/styles/helpers/_util.scss
+++ b/src/assets/styles/helpers/_util.scss
@@ -14,6 +14,11 @@
 
 .uppercase { text-transform: uppercase; }
 .text-center { text-align: center; }
+.text-ellipsis {
+    white-space: nowrap;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+}
 
 .reset-link-style {
     text-decoration: inherit;
