--- a/src/assets/styles/material/_overloads.scss
+++ b/src/assets/styles/material/_overloads.scss
@@ -49,6 +49,12 @@
     opacity: .9;
 }
 
+// .mat-icon-button {
+//     width: auto !important;
+//     height: auto !important;
+//     line-height: unset !important;
+// }
+
 // Material dialogs
 .mat-dialog-container {
     border-radius: 15px !important;
@@ -58,12 +64,4 @@
     .mat-dialog-container {
         border-radius: 18px !important;
     }
-}
-
-
-// Utils
-.reset-mat-icon-button {
-    width: auto !important;
-    height: auto !important;
-    line-height: unset !important;
 }
