--- a/src/assets/styles/design/_colors.scss
+++ b/src/assets/styles/design/_colors.scss
@@ -43,6 +43,7 @@
 // Background color
 .bg-blue { background-color: hsl(var(--clr-blue)); }
 .bg-blue-dark { background-color: hsl(var(--clr-blue-dark)); }
+.bg-transparent { background-color: transparent; }
 
 // Others
 .bg-text-academic-level, .bg-text-academic-level > button {
