--- a/src/assets/styles/material/_overloads.scss
+++ b/src/assets/styles/material/_overloads.scss
@@ -24,7 +24,7 @@
 // Material icons
 .small-icon.mat-icon {
     width: var(--fs-medium);
-    height: var(--fs-medium);
+    height: 100%;
     font-size: var(--fs-medium);
 }
 
