--- a/src/app/features/results/results-list/results-list.component.html
+++ b/src/app/features/results/results-list/results-list.component.html
@@ -143,29 +143,29 @@
     <!-- Post grid -->
     <section class="posts-grid" *ngIf="!isLoading && hasData" @fadeInOut>
       <div class="rounded-card flex-column flex-space_between gap-07" *ngFor="let post of posts">
-        <div class="flex-space_between-center">
-          <p>{{ post.user.fullName }} - {{ post.createdAt|timeAgo }}</p>
-
-          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Opciones" matTooltip="Opciones">
-            <mat-icon class="text-blue-dark">more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="report(post)" *ngIf="post.user.id !== user?.id">
-              <mat-icon>report</mat-icon>
-              <span>Reportar</span>
-            </button>
-            <button mat-menu-item (click)="deletePost(post)" *ngIf="post.user.id === user?.id">
-              <mat-icon>delete</mat-icon>
-              <span>Eliminar</span>
-            </button>
-          </mat-menu>
-        </div>
-  
         <div>
-          <h2><a [routerLink]="['/posts/view', post.id]" class="reset-link-style">
+          <div class="flex-space_between-center">
+            <p>{{ post.user.fullName }} - {{ post.createdAt|timeAgo }}</p>
+  
+            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Opciones" matTooltip="Opciones">
+              <mat-icon class="text-blue-dark">more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="report(post)" *ngIf="post.user.id !== user?.id">
+                <mat-icon>report</mat-icon>
+                <span>Reportar</span>
+              </button>
+              <button mat-menu-item (click)="deletePost(post)" *ngIf="post.user.id === user?.id">
+                <mat-icon>delete</mat-icon>
+                <span>Eliminar</span>
+              </button>
+            </mat-menu>
+          </div>
+
+          <h2><a [routerLink]="['/posts/view', post.id]" [queryParams]="filterQueryParams" class="reset-link-style">
             {{ post.title }}
           </a></h2>
-          <p><a [routerLink]="['/posts/view', post.id]" class="reset-link-style">
+          <p><a [routerLink]="['/posts/view', post.id]" [queryParams]="filterQueryParams" class="reset-link-style">
             {{ post.shortDescription }}
           </a></p>
         </div>
@@ -177,28 +177,28 @@
           </div>
   
           <div class="flex-wrap gap-025">
-            <span class="small-border-tag-{{ post.mainFile.tagColor }}">{{ post.mainFile.ext }}</span>
+            <span class="small-border-tag{{ '-' + post.mainFile.tagColor }}">{{ post.mainFile.ext }}</span>
             <ng-container *ngFor="let file of post.supportingMaterial">
-              <span class="small-border-tag-{{ file.tagColor }}">{{ file.ext }}</span>
+              <span class="small-border-tag{{ '-' + file.tagColor }}">{{ file.ext }}</span>
             </ng-container>
           </div>
         </div>
   
         <div class="flex-wrap gap-025">
-          <span class="rounded-button-slim bg-text-academic-level">Nivel académico: {{ post.academicLevel.name }}</span>
-          <span class="rounded-button-slim bg-text-axis">Eje: {{ post.axis.name }}</span>
-          <span class="rounded-button-slim bg-text-subject">Asignatura: {{ post.axis.subject.name }}</span>
+          <span class="rounded-button-slim fs-small bg-text-academic-level">{{ post.academicLevel.name }}</span>
+          <span class="rounded-button-slim fs-small bg-text-axis">{{ post.axis.name }}</span>
+          <span class="rounded-button-slim fs-small bg-text-subject">{{ post.axis.subject.name }}</span>
         </div>
   
         <div class="flex-space_between-center">
-          <div class="flex-center-center gap-1 flex-wrap">
+          <div class="flex-center-center gap-05">
             <div class="flex-center-center gap-025">
               <mat-icon class="small-icon text-blue-dark">favorite_outline</mat-icon>
-              <span class="fw-600">{{ post.totalLikes }} Me gusta</span>
+              <span class="fw-600 text-center">{{ post.totalLikes }} Me gusta</span>
             </div>
             <div class="flex-center-center gap-025">
               <mat-icon class="small-icon text-blue-dark">visibility</mat-icon>
-              <span class="fw-600">{{ post.totalLikes }} Visualizaciones</span>
+              <span class="fw-600 text-center">{{ post.totalViews }} Visualizaciones</span>
             </div>
           </div>
   
