--- a/src/assets/styles/design/_components.scss
+++ b/src/assets/styles/design/_components.scss
@@ -24,13 +24,19 @@
 
 .rounded-button-slim {
     gap: .2em;
-    padding: .2em .5em;
+    padding: .3em .8em;
     font-weight: 600;
 }
 
 .rounded-button:hover,
 .rounded-button-slim:hover {
     opacity: .9;
+}
+
+.rounded-button:disabled,
+.rounded-button-slim:disabled {
+    background-color: rgba(0, 0, 0, 0.12);
+    color: rgba(0, 0, 0, 0.26);
 }
 
 @media (min-width: 48rem) {
@@ -78,7 +84,8 @@
 }
 
 .circle-button:disabled {
-    background-color: #efefef;
+    background-color: rgba(0, 0, 0, 0.12);
+    color: rgba(0, 0, 0, 0.26);
 }
 
 // Inputs
@@ -121,10 +128,12 @@
 }
 
 // Basic tags
+.border-tag-undefined,
 .border-tag-red,
 .border-tag-blue,
 .border-tag-green,
 .border-tag-orange,
+.small-border-tag-undefined,
 .small-border-tag-red,
 .small-border-tag-blue,
 .small-border-tag-green,
@@ -139,12 +148,19 @@
     min-width: 0;
 }
 
+.small-border-tag-undefined,
 .small-border-tag-red,
 .small-border-tag-blue,
 .small-border-tag-green,
 .small-border-tag-orange {
     font-size: var(--fs-small);
     line-height: var(--fs-small);
+}
+
+.small-border-tag-undefined,
+.border-tag-undefined {
+    border-color: hsl(var(--clr-blue-dark));
+    color: hsl(var(--clr-blue-dark));
 }
 
 .small-border-tag-red,
