--- a/src/assets/styles/helpers/_box-model.scss
+++ b/src/assets/styles/helpers/_box-model.scss
@@ -3,6 +3,10 @@
     width: 100%;
 }
 
+.w-70 {
+    width: 70%;
+}
+
 .w-50 {
     width: 50%;
 }
@@ -19,6 +23,11 @@
     width: 20%;
 }
 
+// Height
+.h-100 {
+    height: 100%;
+}
+
 // Margin
 .m-y-1 {
     margin-block: 1rem;
@@ -30,6 +39,10 @@
 
 .m-t-2 {
     margin-top: 2rem;
+}
+
+.m-b-05 {
+    margin-bottom: .5rem;
 }
 
 .m-l-05 {
