--- a/src/app/features/posts/post-detail/post-detail.component.html
+++ b/src/app/features/posts/post-detail/post-detail.component.html
@@ -6,11 +6,11 @@
     </button>
 
     <!-- Post card -->
-    <div class="rounded-card flex-column flex-space_between gap-07" *ngIf="post">
+    <div class="rounded-card flex-column flex-space_between gap-07" *ngIf="post" @fadeInOut>
       <div class="flex-column">
         <div class="flex-space_between-center">
           <p>{{ post.user.fullName }} - {{ post.createdAt|timeAgo }}</p>
-    
+
           <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Opciones" matTooltip="Opciones">
             <mat-icon class="text-blue-dark">more_vert</mat-icon>
           </button>
@@ -29,57 +29,57 @@
         <h2 class="m-b-05">{{ post.title }}</h2>
         <p>{{ post.description }}</p>
       </div>
-  
+
       <div class="flex-wrap gap-025">
         <span class="rounded-button-slim fs-small bg-text-academic-level">{{ post.academicLevel.name }}</span>
         <span class="rounded-button-slim fs-small bg-text-axis">{{ post.axis.name }}</span>
         <span class="rounded-button-slim fs-small bg-text-subject">{{ post.axis.subject.name }}</span>
       </div>
-  
+
       <div>
         <div class="flex-start-center gap-025">
           <mat-icon class="text-blue-dark">description</mat-icon>
           <span class="fw-600">{{ post.totalFiles }} Documentos</span>
         </div>
-  
+
         <div class="flex-space_between-center m-l-05">
           <div class="border-tag{{ '-' + post.mainFile.tagColor }}">
             <span class="text-ellipsis">{{ post.mainFile.name }}</span>
             <span>{{ post.mainFile.ext }}</span>
           </div>
           <div class="flex-center-center">
-            <a mat-icon-button [href]="post.mainFile.url" download [target]="post.mainFile.ngxDocViewer === 'office' ? '_self' : '_blank'">
+            <a mat-icon-button [href]="post.mainFile.url" download
+              [target]="post.mainFile.ngxDocViewer === 'office' ? '_self' : '_blank'" aria-label="Descargar"
+              matTooltip="Descargar">
               <mat-icon class="text-blue-dark">file_download</mat-icon>
             </a>
-            <button class="rounded-button-slim fw-600 bg-transparent text-blue"
-              [disabled]="!post.mainFile.ngxDocViewer"
+            <button class="rounded-button-slim fw-600 bg-transparent text-blue" [disabled]="!post.mainFile.ngxDocViewer"
               [ngClass]="{'active': currentFile?.name === post.mainFile.name}"
-              (click)="viewDocument(post.mainFile); scroll(filePreview)"
-              mat-ripple>
+              (click)="viewDocument(post.mainFile); scroll(filePreview)" mat-ripple>
               Ver
             </button>
           </div>
         </div>
-  
+
         <div class="flex-space_between-center m-l-05" *ngFor="let file of post.supportingMaterial">
           <div class="border-tag{{ '-' + file.tagColor }}">
             <span class="text-ellipsis">{{ file.name }}</span>
             <span>{{ file.ext }}</span>
           </div>
           <div class="flex-center-center">
-            <a mat-icon-button [href]="file.url" download [target]="file.ngxDocViewer === 'office' ? '_self' : '_blank'">
+            <a mat-icon-button [href]="file.url" download [target]="file.ngxDocViewer === 'office' ? '_self' : '_blank'"
+              aria-label="Descargar" matTooltip="Descargar">
               <mat-icon class="text-blue-dark">file_download</mat-icon>
             </a>
-            <button class="rounded-button-slim fw-600 bg-transparent text-blue"
-              [disabled]="!file.ngxDocViewer"
-              [ngClass]="{'active': currentFile?.name === file.name}"
-              (click)="viewDocument(file); scroll(filePreview)" mat-ripple>
+            <button class="rounded-button-slim fw-600 bg-transparent text-blue" [disabled]="!file.ngxDocViewer"
+              [ngClass]="{'active': currentFile?.name === file.name}" (click)="viewDocument(file); scroll(filePreview)"
+              mat-ripple>
               Ver
             </button>
           </div>
         </div>
       </div>
-  
+
       <div class="flex-space_between-center">
         <div class="flex-center-center gap-05 post-stats">
           <div class="flex-center-center gap-025">
@@ -88,20 +88,22 @@
           </div>
           <div class="flex-center-center gap-025">
             <mat-icon class="small-icon text-blue-dark">visibility</mat-icon>
-            <span class="fw-700 text-center" [ngClass]="{'fs-small': isMobile}">{{ post.totalViews }} Visualizaciones</span>
+            <span class="fw-700 text-center" [ngClass]="{'fs-small': isMobile}">{{ post.totalViews }}
+              Visualizaciones</span>
           </div>
         </div>
-  
-        <button mat-icon-button (click)="toggleLike(post)">
+
+        <button mat-icon-button appDebounceClick (debounceClick)="toggleLike(post)" [debounceTime]="700"
+          aria-label="Me gusta" [matTooltip]="post.alreadyLiked ? 'Quitar me gusta' : 'Dar me gusta'">
           <mat-icon class="text-red">
             {{ post.alreadyLiked ? 'favorite' : 'favorite_outline' }}
           </mat-icon>
         </button>
       </div>
     </div>
-    
+
     <!-- Post shimmer card -->
-    <div class="rounded-card flex-column flex-space_between gap-1" *ngIf="!post">
+    <div class="rounded-card flex-column flex-space_between gap-1" *ngIf="!post" @fadeInOut>
       <div class="flex-space_between-center">
         <div class="shimmer-text-regular grow-1"></div>
         <mat-icon class="shimmer-text-color">more_vert</mat-icon>
@@ -164,11 +166,8 @@
 
   <!-- File preview -->
   <div class="right-card" #filePreview>
-    <div class="doc-viewer shimmer-loading" *ngIf="(!!currentFile?.ngxDocViewer && !!post) || !post">
-      <ngx-doc-viewer
-        *ngIf="!!currentFile && !!currentViewer"
-        [url]="currentFile.url"
-        [viewer]="currentViewer">
+    <div class="doc-viewer shimmer-loading" *ngIf="(!!currentFile?.ngxDocViewer && !!post) || !post" @fadeInOut>
+      <ngx-doc-viewer *ngIf="!!currentFile && !!currentViewer" [url]="currentFile.url" [viewer]="currentViewer">
       </ngx-doc-viewer>
     </div>
   </div>
