feat(post-form): add post form to create posts

--- a/src/assets/styles/design/_colors.scss
+++ b/src/assets/styles/design/_colors.scss
@@ -43,6 +43,9 @@
 // Background color
 .bg-blue { background-color: hsl(var(--clr-blue)); }
 .bg-blue-dark { background-color: hsl(var(--clr-blue-dark)); }
+.bg-red { background-color: hsl(var(--clr-red)); }
+.bg-green { background-color: hsl(var(--clr-green)); }
+.bg-orange { background-color: hsl(var(--clr-orange)); }
 .bg-transparent { background-color: transparent; }
 
 // Others
