--- a/src/assets/styles/design/_components.scss
+++ b/src/assets/styles/design/_components.scss
@@ -16,7 +16,7 @@
     padding-inline: var(--p-x, 1em);
     padding-block: var(--p-y, .7em);
 
-    > .mat-icon {
+    >.mat-icon {
         height: 100%;
         font-weight: 300;
     }
@@ -69,12 +69,12 @@
     color: var(--text-color, hsl(var(--clr-white)));
     background-color: var(--bg-color, hsl(var(--clr-blue-dark)));
 
-    > .mat-icon {
+    >.mat-icon {
         height: 100%;
         font-weight: 300;
     }
 
-    > span {
+    >span {
         padding-inline: .5ch;
     }
 }
@@ -205,6 +205,7 @@
     0% {
         background-position: -100% 0;
     }
+
     100% {
         background-position: 100% 0;
     }
@@ -214,6 +215,7 @@
     0% {
         background-position: -1200px 0;
     }
+
     100% {
         background-position: 1200px 0;
     }
@@ -233,4 +235,40 @@
 
 .shimmer-text-color {
     color: #edeef1;
+}
+
+// Loaders
+.shapes-loader {
+    width: 2rem;
+    height: 2rem;
+
+    // Circle shape
+    border-radius: 50%;
+    background: hsl(var(--clr-purple-light));
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    animation: shapes-loader 2.5s infinite cubic-bezier(0.3, 1, 0, 1);
+
+    // Resets
+    padding: 0 !important;
+    > * {
+        display: none !important;
+    }
+}
+
+@keyframes shapes-loader {
+
+    // Square
+    33% {
+        border-radius: 0;
+        background: hsl(var(--clr-pink));
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+
+    // Triangle
+    66% {
+        border-radius: 0;
+        background: hsl(var(--clr-yellow-light));
+        clip-path: polygon(50% 0, 50% 0, 100% 100%, 0 100%);
+        transform: rotate(360deg);
+    }
 }
