--- a/src/assets/styles/helpers/_box-model.scss
+++ b/src/assets/styles/helpers/_box-model.scss
@@ -23,6 +23,17 @@
     width: 20%;
 }
 
+.w-fit {
+    width: fit-content;
+}
+
+.min-w-0 {
+    min-width: 0;
+}
+
+.min-w-fit {
+    min-width: fit-content;
+}
 // Height
 .h-100 {
     height: 100%;
@@ -47,4 +58,9 @@
 
 .m-l-05 {
     margin-left: .5rem;
+}
+
+// Padding
+.p-05 {
+    padding: .5rem;
 }
