--- a/src/app/features/posts/post-form/post-form.component.html
+++ b/src/app/features/posts/post-form/post-form.component.html
@@ -56,11 +56,11 @@
       </mat-form-field>
 
       <div class="flex-end-center">
-        <button type="submit" mat-raised-button color="primary" *ngIf="!isLoading" @inOutRight>
+        <button type="submit" mat-raised-button color="primary" *ngIf="!isLoading" @inOutRight [@.disabled]="this.form.invalid">
           <span>Publicar</span>
           <mat-icon class="fs-regular">send</mat-icon>
         </button>
-        <div class="shapes-loader" *ngIf="isLoading" @inOutLeft></div>
+        <div class="shapes-loader" *ngIf="isLoading" @inOutLeft matTooltip="Cargando"></div>
       </div>
     </form>
   </div>
@@ -98,18 +98,18 @@
       <div class="flex-space_between-center gap-05">
         <div class="flex-center-center gap-05 min-w-0">
           <span class="small-border-tag{{ '-' + file.tagColor }} min-w-fit">{{ file.ext }}</span>
-          <span class="fw-500 text-ellipsis">{{ file.fullName }}</span>
+          <span class="fw-500 text-ellipsis" matTooltip="{{ file.fullName }}">{{ file.fullName }}</span>
         </div>
         <div *ngIf="file.uploadCompleted" class="flex-center-center">
           <a mat-icon-button [href]="file.url" download [target]="file.ngxDocViewer === 'office' ? '_self' : '_blank'"
             aria-label="Descargar" matTooltip="Descargar">
             <mat-icon class="text-blue-dark">download</mat-icon>
           </a>
-          <button (click)="removeFile(i)" mat-icon-button>
+          <button (click)="removeFile(i)" mat-icon-button matTooltip="Remover">
             <mat-icon class="text-blue-dark">delete</mat-icon>
           </button>
         </div>
-        <div class="p-05" *ngIf="!file.uploadCompleted">
+        <div class="p-05" *ngIf="!file.uploadCompleted" matTooltip="Cargando">
           <mat-spinner diameter="24"></mat-spinner>
         </div>
       </div>
