refactor(results): move result-list component

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="rounded-button box-shadow-1" matRipple [routerLink]="['/results']" routerLinkActive="active">
+                    <a class="rounded-button box-shadow-1" matRipple [routerLink]="['/posts']" routerLinkActive="active">
                         <mat-icon>search</mat-icon>
                         <span>Buscar</span>
                     </a>
