--- a/src/assets/styles/helpers/_box-model.scss
+++ b/src/assets/styles/helpers/_box-model.scss
@@ -44,6 +44,10 @@
     margin-block: 1rem;
 }
 
+.m-t-05 {
+    margin-top: .5rem;
+}
+
 .m-t-1 {
     margin-top: 1rem;
 }
@@ -54,6 +58,10 @@
 
 .m-b-05 {
     margin-bottom: .5rem;
+}
+
+.m-b-1 {
+    margin-bottom: 1rem;
 }
 
 .m-l-05 {
