--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -5,6 +5,7 @@
 .flex-start-center,
 .flex-end-center,
 .flex-column,
+.flex-column-center,
 .flex-wrap
 {
     display: flex;
@@ -36,6 +37,11 @@
 
 .flex-column {
     flex-direction: column;
+}
+
+.flex-column-center {
+    flex-direction: column;
+    align-items: center;
 }
 
 .flex-wrap {
